--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -203,7 +203,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/work/sixtyfps/Qt
-        key: ${{ runner.os }}-${{ github.job }}-cpp
+        key: ${{ runner.os }}-${{ github.job }}-cpp-Qt
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       if: matrix.os == 'ubuntu-20.04'
